--- a/contact.html
+++ b/contact.html
@@ -37,11 +37,14 @@
 		<!-- start nav -->
 		<nav class="navbar navbar-expand-md sticky-top">
 			<a href="#" class="navbar-brand">	
-				<img id="company-logo" src="assets/images/logo.png">
+				<img id="company-logo" class="d-md-block d-none" src="assets/images/logo.png">
 			</a>
 
 			<button class="navbar-toggler" data-toggle="collapse" data-target="#navbar-nav">
 				<span class="navbar-toggler-icon"></span>
+				<span class="d-block d-md-none nav-icon-pixel">
+						<img id="icon-pixel" src="assets/images/icon.png">
+					</span>
 			</button>
 
 			<div id="navbar-nav" class="collapse navbar-collapse">
@@ -68,14 +71,14 @@
 
 		<div class="container-fluid">
 
-			<div class="row p-5">
+			<div class="row p-4 p-md-5">
 				<div class="col-lg-6 contact-top">
-					<h1 class="px-5 pt-5"> VantagePoint Trading and Consultancy Inc. </h1>
-					<h4 class="px-5 pt-4"> Blk 16 Lot 62 Golden City, Brgy. Salawag, Dasmariñas City, Cavite </h4>
-					<h4 class="px-5 pt-4 contact-email"> vantagepointconsultancy@gmail.com </h4>
-					<h4 class="px-5 pt-3 contact-ll"> (02) 400 4046 </h4>
-					<h4 class="px-5 contact-mb"> +63 956 872 0280 </h4>
-					<h1 class="px-5 pt-5"> Google Map Us! </h1>
+					<h1 class="px-md-5 pt-md-5"> VantagePoint Trading and Consultancy Inc. </h1>
+					<h4 class="px-md-5 pt-md-4"> Blk 16 Lot 62 Golden City, Brgy. Salawag, Dasmariñas City, Cavite </h4>
+					<h4 class="px-md-5 pt-md-4 contact-email"> vantagepointconsultancy@gmail.com </h4>
+					<h4 class="px-md-5 pt-md-3 contact-ll"> (02) 400 4046 </h4>
+					<h4 class="px-md-5 contact-mb"> +63 956 872 0280 </h4>
+					<h1 class="px-md-5 pt-md-5"> Google Map Us! </h1>
 				</div>	
 				<div class="col-lg-4 contact-form p-3">
 					<form>
@@ -125,39 +128,39 @@
 	<!-- end container -->
 
 	<!-- start contact -->
-	<div class="container-fluid">
-		<section id="contact">
-			<h1 class="text-center pt-5"> QUICK CONTACT </h1>
-			<hr>
-			<div class="row pb-3">
-				<div class="col-md-12">
-					<div class="row">
-						<div id="qcontact-phone" class="col-md-4 text-right qcontact">
-							<a href="#" class="link">
-								<i class="fas fa-mobile-alt"></i>
-								<h4 class="mb-0 call">Call us on</h4>
-								<p class="p-link">+63 956 872 0280</p>
-							</a>
-						</div>
-						<div id="qcontact-gmail" class="col-md-4 text-center qcontact">
-							<a href="contact.html" class="link">
-								<i class="far fa-paper-plane"></i>
-								<h4 class="mb-0 mail">For business inquiries</h4>
-								<p class="p-link">vantagepointconsultancy@gmail.com</p>
-							</a>
-						</div>
-						<div id="qcontact-fb" class="col-md-4 text-left qcontact">
-							<a href="https://www.facebook.com/VPTCI/" target="_blank" class="link">
-								<i class="fab fa-facebook-f"></i>
-								<h4 class="mb-0 chat">Let's chat</h4>
-								<p class="p-link">@VPTCI</p>
-							</a>
+		<div class="container-fluid">
+			<section id="contact">
+				<h1 class="text-center pt-5"> QUICK CONTACT </h1>
+				<hr>
+				<div class="row pb-3">
+					<div class="col-12">
+						<div class="row">
+							<div id="qcontact-phone" class="col-4 text-right qcontact">
+								<a href="#" class="link">
+									<i class="fas fa-mobile-alt"></i>
+									<h4 class="d-none d-lg-block mb-0 call">Call us on</h4>
+									<p class="d-none d-lg-block p-link">+63 956 872 0280</p>
+								</a>
+							</div>
+							<div id="qcontact-gmail" class="col-4 text-center qcontact">
+								<a href="contact.html" class="link">
+									<i class="far fa-paper-plane"></i>
+									<h4 class="d-none d-lg-block mb-0 mail">For business inquiries</h4>
+									<p class="d-none d-lg-block p-link d-none">vantagepointconsultancy@gmail.com</p>
+								</a>
+							</div>
+							<div id="qcontact-fb" class="col-4 text-left qcontact">
+								<a href="https://www.facebook.com/VPTCI/" target="_blank" class="link">
+									<i class="fab fa-facebook-f"></i>
+									<h4 class="d-none d-lg-block mb-0 chat">Let's chat</h4>
+									<p class="d-none d-lg-block p-link">@VPTCI</p>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-		<!-- end contact -->
+			</section>
+			<!-- end contact -->
 
 		<!-- start footer -->
 		<footer>
