--- a/credentials.html
+++ b/credentials.html
@@ -67,26 +67,27 @@
 		<!-- end nav -->
 
 		<div class="container-fluid">
-			<div class="row text-center p-5">
-				<div class="col-md-4 col-lg-2 offset-lg-3 credentials-circles">
-					<img src="assets/images/sec.png" class="circle-sec">
+			<div class="row text-center p-4 p-md-5">
+				<div class="col-4 col-lg-2 offset-lg-3 credentials-circles">
+					<img src="assets/images/sec.png">
 				</div>
-				<div class="col-md-4 col-lg-2 credentials-circles">
-					<img src="assets/images/bir.png" class="circle-bir">
+				<div class="col-4 col-lg-2 credentials-circles">
+					<img src="assets/images/bir.png">
 				</div>
-				<div class="col-md-4 col-lg-2 credentials-circles">
-					<img src="assets/images/cus.png" class="circle-cus">
+				<div class="col-4 col-lg-2 credentials-circles">
+					<img src="assets/images/cus.png">
 				</div>
 			</div>
-			<div class="row text-center p-5">
+			
+			<div class="row text-center p-4 p-md-5">
 				<div class="col-12">
-					<span class="alert alert-sec d-md-block">
+					<span class="alert alert-sec d-block">
 						Registration No. CS201733328
 					</span>
-					<span class="alert alert-bir d-md-block">
+					<span class="alert alert-bir d-block">
 						TIN No. 009 840 741 000
 					</span>
-					<span class="alert alert-cus d-md-block">
+					<span class="alert alert-cus d-block">
 						Registration No. CS201733328
 					</span>
 				</div>
@@ -99,7 +100,7 @@
 			<div class="row text-center p-5">
 				<div class="col-12 col-md-6 col-lg-3">
 					<div class="card">
-						<img src="./assets/images/SEC.jpg" class="card-img-top">
+						<img src="./assets/images/SEC.JPG" class="card-img-top">
 						<div class="card-body">
 							<h3 class="card-title"> SEC Certificate </h3>
 						</div>
@@ -142,39 +143,39 @@
 	<!-- end container -->
 
 	<!-- start contact -->
-	<div class="container-fluid">
-		<section id="contact">
-			<h1 class="text-center pt-5"> QUICK CONTACT </h1>
-			<hr>
-			<div class="row pb-3">
-				<div class="col-md-12">
-					<div class="row">
-						<div id="qcontact-phone" class="col-md-4 text-right qcontact">
-							<a href="#" class="link">
-								<i class="fas fa-mobile-alt"></i>
-								<h4 class="mb-0 call">Call us on</h4>
-								<p class="p-link">+63 956 872 0280</p>
-							</a>
-						</div>
-						<div id="qcontact-gmail" class="col-md-4 text-center qcontact">
-							<a href="contact.html" class="link">
-								<i class="far fa-paper-plane"></i>
-								<h4 class="mb-0 mail">For business inquiries</h4>
-								<p class="p-link">vantagepointconsultancy@gmail.com</p>
-							</a>
-						</div>
-						<div id="qcontact-fb" class="col-md-4 text-left qcontact">
-							<a href="https://www.facebook.com/VPTCI/" target="_blank" class="link">
-								<i class="fab fa-facebook-f"></i>
-								<h4 class="mb-0 chat">Let's chat</h4>
-								<p class="p-link">@VPTCI</p>
-							</a>
+		<div class="container-fluid">
+			<section id="contact">
+				<h1 class="text-center pt-5"> QUICK CONTACT </h1>
+				<hr>
+				<div class="row pb-3">
+					<div class="col-12">
+						<div class="row">
+							<div id="qcontact-phone" class="col-4 text-right qcontact">
+								<a href="#" class="link">
+									<i class="fas fa-mobile-alt"></i>
+									<h4 class="d-none d-lg-block mb-0 call">Call us on</h4>
+									<p class="d-none d-lg-block p-link">+63 956 872 0280</p>
+								</a>
+							</div>
+							<div id="qcontact-gmail" class="col-4 text-center qcontact">
+								<a href="contact.html" class="link">
+									<i class="far fa-paper-plane"></i>
+									<h4 class="d-none d-lg-block mb-0 mail">For business inquiries</h4>
+									<p class="d-none d-lg-block p-link d-none">vantagepointconsultancy@gmail.com</p>
+								</a>
+							</div>
+							<div id="qcontact-fb" class="col-4 text-left qcontact">
+								<a href="https://www.facebook.com/VPTCI/" target="_blank" class="link">
+									<i class="fab fa-facebook-f"></i>
+									<h4 class="d-none d-lg-block mb-0 chat">Let's chat</h4>
+									<p class="d-none d-lg-block p-link">@VPTCI</p>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
-		</section>
-		<!-- end contact -->
+			</section>
+			<!-- end contact -->
 
 		<!-- start footer -->
 		<footer>
