--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,33 @@
 			<h1 id="landing-contact" class="d-md-block"> WE ARE EXCITED TO WORK WITH YOU </h1>
 		</header>
 
+		<!-- nav  -->
+		<nav class="navbar navbar-expand-md sticky-top animated fadeInDown navbar-dark">
+			<a class="navbar-brand" href="#">
+				<img id="company-logo" class="d-md-block d-none" src="assets/images/logo.png">
+			</a>
+			<button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbar-nav" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon d-none"></span>
+				<span class="d-block d-md-none nav-icon-pixel">
+					<img id="icon-pixel" class="img-fluid" src="assets/images/icon.png">
+				</span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbar-nav">
+				<div class="navbar-nav ml-auto">
+					<a class="nav-item nav-link" href="index.html">Home</a>
+					<a class="nav-item nav-link" href="index.html#about">About</a>
+					<a class="nav-item nav-link" href="index.html#services">Services</a>
+					<a class="nav-item nav-link" href="index.html#products">Product</a>
+					<a class="nav-item nav-link" href="#contact">Contact</a>
+					
+				</div>
+			</div>
+		</nav>
+		<!-- end nav -->
+
 		<!-- start nav -->
-		<nav class="navbar navbar-expand-md sticky-top animated fadeInDown">
+		<!-- <nav class="navbar navbar-expand-md sticky-top animated fadeInDown">
 			<a href="#" class="navbar-brand">	
 				<img id="company-logo" class="d-md-block d-none" src="assets/images/logo.png">
 			</a>
@@ -66,21 +91,21 @@
 					</li>
 				</ul>
 			</div>
-		</nav>
+		</nav> -->
 		<!-- end nav -->
 
 		<div class="container-fluid">
 
-			<div class="row p-4 p-md-5">
+			<div class="row p-4 my-3 p-md-5">
 				<div class="col-lg-6 contact-top">
 					<h1 class="px-md-5 pt-md-5"> VantagePoint Trading and Consultancy Inc. </h1>
 					<h4 class="px-md-5 pt-md-4"> Blk 16 Lot 62 Golden City, Brgy. Salawag, Dasmariñas City, Cavite </h4>
 					<h4 class="px-md-5 pt-md-4 contact-email"> vantagepointconsultancy@gmail.com </h4>
 					<h4 class="px-md-5 pt-md-3 contact-ll"> (02) 400 4046 </h4>
 					<h4 class="px-md-5 contact-mb"> +63 956 872 0280 </h4>
-					<h1 class="px-md-5 pt-md-5"> Google Map Us! </h1>
+					<!-- <h1 class="px-md-5 pt-md-5 d-md-none d-lg-block"> Google Map Us! </h1> -->
 				</div>	
-				<div class="col-lg-4 contact-form p-3">
+				<div class="col-lg-4 contact-form p-5 mt-5">
 					<form>
 						<div class="form-group">
 							<label for="username">Name</label>
@@ -110,12 +135,13 @@
 			</div>
 			<!-- end row -->
 
-			<div class="row contact-map">
-				<div class="col-lg-6 offset-lg-1">
+			<div class="row contact-map px-5">
+				<div class="col-lg-6 px-lg-5">
+				<h1 class="px-lg-5 pb-lg-5 p-4"> Google Map Us! </h1>
 					<iframe class="embed-responsive-item gmap" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3865.3627034774445!2d120.97878881466157!3d14.348409289963516!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397d41b93a8c49d%3A0x59efd66d28663958!2sGolden%20City!5e0!3m2!1sen!2sph!4v1583330817460!5m2!1sen!2sph"  frameborder="0" allowfullscreen=""></iframe>
 				</div>
-				<div class="col-lg-4 p-5">
-					<img id="lost" src="assets/images/lost1.gif">
+				<div class="col-lg-6 p-5 d-block text-center">
+					<img id="lost" class="mt-lg-5 pt-lg-5" src="assets/images/lost1.gif">
 				</div>
 				<!-- end map -->	
 			</div>
@@ -128,7 +154,7 @@
 	<!-- end container -->
 
 	<!-- start contact -->
-	<div class="container-fluid">
+	<div class="container-fluid pt-lg-5">
 		<section id="contact">
 			<h1 class="text-center pt-5"> QUICK CONTACT </h1>
 			<hr>
