--- a/credentials.html
+++ b/credentials.html
@@ -34,8 +34,33 @@
 			<h1 id="landing-credentials" class="d-md-block"> WE LEARN FROM FAILURE, NOT FROM SUCCESS </h1>
 		</header>
 
+		<!-- nav  -->
+		<nav class="navbar navbar-expand-md sticky-top animated fadeInDown navbar-dark">
+			<a class="navbar-brand" href="#">
+				<img id="company-logo" class="d-md-block d-none" src="assets/images/logo.png">
+			</a>
+			<button class="navbar-toggler mr-auto" type="button" data-toggle="collapse" data-target="#navbar-nav" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon d-none"></span>
+				<span class="d-block d-md-none nav-icon-pixel">
+					<img id="icon-pixel" class="img-fluid" src="assets/images/icon.png">
+				</span>
+			</button>
+
+			<div class="collapse navbar-collapse" id="navbar-nav">
+				<div class="navbar-nav ml-auto">
+					<a class="nav-item nav-link" href="index.html">Home</a>
+					<a class="nav-item nav-link" href="index.html#about">About</a>
+					<a class="nav-item nav-link" href="index.html#services">Services</a>
+					<a class="nav-item nav-link" href="index.html#products">Product</a>
+					<a class="nav-item nav-link" href="#contact">Contact</a>
+					
+				</div>
+			</div>
+		</nav>
+		<!-- end nav -->
+
 		<!-- start nav -->
-		<nav class="navbar navbar-expand-md sticky-top animated fadeInDown">
+		<!-- <nav class="navbar navbar-expand-md sticky-top animated fadeInDown">
 			<a href="#" class="navbar-brand">	
 				<img id="company-logo" class="d-md-block d-none" src="assets/images/logo.png">
 			</a>
@@ -66,7 +91,7 @@
 					</li>
 				</ul>
 			</div>
-		</nav>
+		</nav> -->
 		<!-- end nav -->
 
 		<div class="container-fluid">
