--- a/index.html
+++ b/index.html
@@ -374,7 +374,25 @@
 		<section id="led" class="p-md-5 p-3">
 			<h1 class="text-center pt-lg-5"> LED LIGHTS </h1>
 			<hr>
-			<div class="row text-center px-4 p-lg-5">
+
+			<div class="row align-items-center text-center py-md-5 py-3">
+				<div class="col-lg-6 text-center">
+					<div id="mission" class="p-lg-4">
+						<h2 class="about-tags p-md-3 text-danger"> Eco-Friendly </h2>
+						<p class="text-justify p-lg-5 p-4 p-products"> LED product is healthy, free of stroboflash, ultraviolent rays, infrared radiation and mercury element. It will not produce harmful substances during the use, so it is recognized as a new green lighting in the twenty first century. </p>
+					</div>
+				</div>
+				<div class="col-lg-6 text-center">
+					<div id="vision" class="p-lg-4 pt-2">
+						<h2 class="about-tags p-md-3 text-danger"> Energy-Efficient </h2>
+						<p class="text-justify p-lg-5 p-4 p-products"> LED product has the advantages of high brightness, low power consumption, low hear, etc. 50-80% of energy can be saved compared to the traditional light sources under the same illumination intensity. </p>
+					</div>
+				</div>
+			</div>
+			<!-- end row -->
+
+
+			<!-- <div class="row text-center px-4 p-lg-5">
 				<div class="col-lg-6 text-center">
 					<h2 class="p-3 text-danger"> Eco-Friendly </h2>
 					<p class="p-4 p-md-5 text-justify p-products"> LED product is healthy, free of stroboflash, ultraviolent rays, infrared radiation and mercury element. It will not produce harmful substances during the use, so it is recognized as a new green lighting in the twenty first century. </p>
@@ -383,7 +401,7 @@
 					<h2 class="p-3 text-danger"> Energy-Efficient </h2>
 					<p class="p-4 p-md-5 text-justify p-products"> LED product has the advantages of high brightness, low power consumption, low hear, etc. 50-80% of energy can be saved compared to the traditional light sources under the same illumination intensity. </p>
 				</div>
-			</div>
+			</div> -->
 
 
 			<div class="container-fluid pb-5">
